[package]
name = "noodle"
version = "0.1.0"
authors = ["Dan Glastonbury <dglastonbury@mozilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-noodle = { path="noodle" }
winapi = { version = "*", features = ["profileapi","winuser"] }

[workspace]
members = [ "noodle" ]