[package]
name = "noodle"
version = "0.1.0"
authors = ["Dan Glastonbury <dglastonbury@mozilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.1"
derive-newtype = "0.2"
itertools = "0.8"

[dependencies.winapi]
version = "*"
git = "https://github.com/djg/winapi-rs"
branch="mf"
features = [
    "d2d1_2",
    "d3d11",
    "d3d11_4",
    "d3dcompiler",
    "dcomp",
    "dxgi1_6",
    "dxgiformat",
    "dxgitype",
    "impl-default",
    "mfapi",
    "mfreadwrite",
    "objbase",
    "winbase",
    "winuser" ]

[features]
default = []
paint-flashing = []
